
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 2.0.20    not yet released

- cron 0 vs 24 hour case straightening (Thanks Aimee Rose)
- support for sun#L or sun#-2 in cron lines


== rufus-scheduler - 2.0.19    released 2013/05/07

- raise ArgumentError on <= 0.0 "every" frequency (Thanks Lucy Fu)
- support multiple mutexes (Thanks Rainux Luo)


== rufus-scheduler - 2.0.18    released 2013/03/06

- support for "L" in cron lines (Thanks Andrew Davey)
- support for negative time strings (Thanks Danny "northox" Fullerton)
- reject invalid weekdays (Thanks pazustep)


== rufus-scheduler - 2.0.17    released 2012/06/14

- @andrehjr patch to make it work on Ruby 1.9.3
- raises ArgumentError on unknown/unsupported options (Idea Tero Tilus)


== rufus-scheduler - 2.0.16    released 2011/12/31

- hardened Rufus.parse_time_string
- running job thread: getting rid of the job pointer once job is done


== rufus-scheduler - 2.0.15    released 2011/12/20

- Scheduler#running_jobs (Thanks Louis Coilliot)


== rufus-scheduler - 2.0.14    released 2011/12/11

- Job #pause and #resume
- Scheduler #pause(job_or_job_id) and #resume(job_or_job_id)
- Scheduler#unschedule(job_or_job_id)


== rufus-scheduler - 2.0.13    released 2011/11/14

- cron lines now OK with "09". Thanks Anthony Lewis


== rufus-scheduler - 2.0.12    released 2011/10/28

- hardened exception handling. Thanks Sam Gibson
- accepting #handle_exception, #log_exception or #on_exception
- scheduler.in '1s', :mutex => 'that_mutex_name'


== rufus-scheduler - 2.0.11    released 2011/09/30

- require 'rufus-scheduler' works


== rufus-scheduler - 2.0.10    released 2011/06/26

- every and allow_overlapping now surviving exceptions. Thanks sha1dy


== rufus-scheduler - 2.0.9    released 2011/04/22

- Scheduler#first_at and :discard_past => true. Thanks concept47
- Scheduler#cron and monthdays (sun#2 or mon#1)
- Scheduler#unschedule_by_tag(t)


== rufus-scheduler - 2.0.8    released 2010/12/31
